--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blocks - Three.js</title>
     <style>
-      @import "node_modules/modern-normalize/modern-normalize.css";
+      @import "../node_modules/modern-normalize/modern-normalize.css";
     </style>
   </head>
   <body>
